# Interpretator

./: CMakeLists.txt
gui/: CMakeLists.txt
gui/include/: mainwindow.hpp
gui/src/: main.cpp  mainwindow.cpp
gui/ui/: mainwindow.ui
lib/: CMakeLists.txt
lib/include/: expression.hpp  lexer.hpp  parser.hpp  token.hpp  util.hpp
lib/src/: expression.cpp  lexer.cpp  parser.cpp  token.cpp  util.cpp
test/: CMakeLists.txt
test/src/: expression_tests.cpp  lexer_tests.cpp  parser_tests.cpp  token_text_tests.cpp  token_value_tests.cpp
